[package]
authors = ["Mariusz Kryński <mrk@sed.pl>"]
edition = "2018"
name = "bevy-robbo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/x11",
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

audio = ["bevy/bevy_audio", "bevy/vorbis"]

[dependencies]
bevy = {version = "0.4.0", default-features=false}
bevy_webgl2 = {version = "0.4.2", default-features = false, optional=true}
anyhow = "1.0"
rand = "0.7"
structopt = "0.3"
uuid = "=0.8.1"
# wasm-tracing-allocator = {version = "0.1.1"}

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 's'
